@@ -94,6 +94,7 @@ In alphabetical order (by last name)
 ** Patch [#12066] Docfix for mocks/mocks.page
 ** Patch [#12300] rr integration
 * Bryan Helmkamp
+** Patch [#13206] Individual Spec's Runtimes in Specdoc formatter
 ** Patch [#14399] Show pending reasons in HTML report
 ** Patch [#14095] Don't have ./script/generate rspec create previous_failures.txt
 * Chris Hoffman
