@@ -98,6 +98,10 @@ module Spec
         def dry_run?
           @options.dry_run ? true : false
         end
+        
+        def profile?
+          @options.profile ? true : false
+        end
       
         def backtrace_line(line)
           line.sub(/\A([^:]+:\d+)$/, '\\1:')
