@@ -20,6 +20,7 @@ module Spec
                                              "You can also specify a custom differ class",
                                              "(in which case you should also specify --require)"],
         :colour =>  ["-c", "--colour", "--color", "Show coloured (red/green) output"],
+        :profile =>  ["-p", "--profile", "Show individual example runtimes in output (for specdoc output only)"],
         :example => ["-e", "--example [NAME|FILE_NAME]",  "Execute example(s) with matching name(s). If the argument is",
                                                           "the path to an existing file (typically generated by a previous",
                                                           "run using --format failing_examples:file.txt), then the examples",
@@ -87,6 +88,7 @@ module Spec
         self.separator ""
         on(*OPTIONS[:diff]) {|diff| @options.parse_diff(diff)}
         on(*OPTIONS[:colour]) {@options.colour = true}
+        on(*OPTIONS[:profile]) {@options.profile = true}
         on(*OPTIONS[:example]) {|example| @options.parse_example(example)}
         on(*OPTIONS[:specification]) {|example| @options.parse_example(example)}
         on(*OPTIONS[:line]) {|line_number| @options.line_number = line_number.to_i}
